--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "By-DhaniOfficiall",
+  "name": "By-Ririn",
   "version": "2.0.0",
-  "description": "Created By DhaniOfficiall.",
+  "description": "Created By Ririn.",
   "main": "node index.js",
   "scripts": {
     "start": "node index.js"
@@ -14,7 +14,7 @@
     "restapi",
     "botwhatsapp"
   ],
-  "author": "DhaniOfficiall",
+  "author": "Ririn Vieux",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BOTZ-DHANI/api-dhani-2023/issues"
